--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,7 @@
-$color-brand: #dd3433;
+:root {
+  --brand: #dd3433;
+  --white: #fff;
+}
 
 /* super lightweight custom reset */
 *,
@@ -112,8 +115,8 @@ h2 {
   display: inline-block;
   padding: 0.8rem 1.2rem;
   text-decoration: none;
-  background: $color-brand;
-  color: #fff;
+  background: var(--brand);
+  color: var(--white);
   border-radius: 4px;
   margin-bottom: 10px;
 }
@@ -122,7 +125,7 @@ h2 {
 }
 a,
 a:visited {
-  color: $color-brand;
+  color: var(--brand);
 }
 
 .nav {
@@ -147,10 +150,10 @@ a:visited {
 
 .intro-wrap {
   overflow: hidden;
-  background: $color-brand;
-  color: #fff;
+  background: var(--brand);
+  color: var(--white);
   a {
-    color: #fff;
+    color: var(--white);
   }
 }
 .bg-tgs {
@@ -211,9 +214,12 @@ a.card-wrap {
   &:hover {
     .card-desc {
       transform: translateX(-0.3em);
-      h2 {
-        text-decoration: underline;
-      }
+    }
+    .card__heading {
+      text-decoration: underline;
+    }
+    .fake-card-link {
+      color: var(--brand);
     }
   }
 }
@@ -222,6 +228,9 @@ a.card-wrap {
   img {
     width: 100%;
   }
+}
+.fake-card-link {
+  text-decoration: underline;
 }
 .content-blob {
   margin-bottom: 4rem;
@@ -249,12 +258,59 @@ a.card-wrap {
 }
 .codepen-embed {
   background: #eee;
+  width: 100%;
+  // margin-bottom: 10px;
+}
+// .codepen__heading-wrapper {
+//   // display: flex;
+//   // flex-direction: column;
+//   background: var(--brand);
+//   padding: 20px 20px 0;
+//   color: var(--white);
+// }
+// .codepen__heading {
+//   font-size: 18px;
+//   font-weight: bold;
+//   margin-right: 10px;
+//   position: relative;
+// }
+.codepen__description {
+  // font-style: italic;
+  font-size: 16px;
+  margin-bottom: 30px;
 }
 
 .stars {
   color: #fde16d;
   font-size: 3.6rem;
   letter-spacing: 3px;
+}
+
+.tags {
+  display: flex;
+}
+.tags__tag {
+  margin: 0 6px 6px 0;
+  font-size: 14px;
+  background: #444;
+  padding: 3px 7px;
+  border-radius: 3px;
+  line-height: 1;
+  color: var(--white);
+  // color: var(--brand);
+  // border: 1px solid var(--brand);
+  // filter: drop-shadow(0 0 1px var(--brand));
+  position: relative;
+
+  // &::before {
+  //   position: absolute;
+  //   left: -10px;
+  //   top: 0;
+  //   width: 10px;
+  //   height: 1em;
+  //   content: '';
+  //   background: pink;
+  // }
 }
 
 @media (min-width: 420px) {
@@ -277,6 +333,7 @@ a.card-wrap {
   .card-img {
     margin-bottom: 0;
   }
+
   .hero-img {
     display: block;
     width: 100%;
@@ -301,10 +358,23 @@ a.card-wrap {
   .card-desc {
     padding-left: 4em;
   }
+  .codepen__heading-wrapper {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    gap: 20px;
+  }
   .flex-50-wrap {
     flex-wrap: nowrap;
   }
   .flex-50 {
     width: 45%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .grid-50 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
   }
 }
