--- a/src/style.scss
+++ b/src/style.scss
@@ -213,7 +213,7 @@ a:visited {
 a.card-wrap {
   text-decoration: none;
   color: #333;
-  margin: 4em 0;
+  margin: 40px 0;
 }
 .card-img {
   margin-bottom: 1.5rem;
@@ -368,7 +368,7 @@ a.card-wrap {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: stretch;
-  height: 15px;
+  height: 16px;
   flex-shrink: 0;
 }
 .browser-frame__img {
