--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,18 @@
   --white: #fff;
   --grey-light: #e9e9ea;
   --grey: #aaa;
+  --dark: #333;
+  //swapped if changing darkmode preference:
+  --main-bg: #fff;
+  --main-fg: #333;
+}
+[data-theme='dark'] {
+  --main-bg: #333;
+  --main-fg: #fff;
+  a,
+  a:visited {
+    color: var(--main-fg); //now white
+  }
 }
 
 /* super lightweight custom reset */
@@ -27,10 +39,17 @@ html {
   font-size: 10px;
 }
 body {
-  color: #444444;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.8rem;
   line-height: 1.8em;
+
+  background: var(--main-bg);
+  color: var(--main-fg);
+}
+main {
+  //Needs to be set or mobile chrome (pixel 2) was setting it as dark (due to OS setting)
+  background: var(--main-bg);
+  transition: background 0.25s;
 }
 p {
   margin: 0 0 1em;
@@ -212,7 +231,7 @@ a:visited {
 
 a.card-wrap {
   text-decoration: none;
-  color: #333;
+  color: var(--main-fg);
   margin: 40px 0;
 }
 .card-img {
@@ -231,9 +250,6 @@ a.card-wrap {
 .content-blob {
   margin-bottom: 4rem;
 }
-.text-muted {
-  color: #444;
-}
 .testimonials {
   text-align: center;
   display: grid;
@@ -244,6 +260,7 @@ a.card-wrap {
 }
 .testimonial {
   background: var(--grey-light);
+  color: var(--dark);
   padding: 20px 20px 0;
   line-height: 2.4rem;
   .stars {
@@ -297,17 +314,20 @@ a.card-wrap {
   padding: 0;
   background: none;
   cursor: pointer;
+  position: relative;
   &[data-selected='false']:hover {
     color: #000;
   }
 }
 .tab__text {
   font-size: 20px;
-  padding: 5px 20px;
+  padding: 5px 20px 10px;
 }
 .tab__underline {
   width: 100%;
   height: 5px;
+  position: absolute;
+  bottom: 0;
 }
 
 // goes down slightly below hero banner section to cut the bottom off of the BrowserFrame component
@@ -322,6 +342,62 @@ a.card-wrap {
   margin-left: 5px;
   position: relative;
   top: 2px;
+}
+
+.toggle {
+  display: flex;
+  justify-content: flex-start;
+  width: 70px;
+  border-radius: 40px;
+  padding: 4px;
+  background: var(--dark);
+  overflow: hidden;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+.toggle--toggled-on {
+  justify-content: flex-end;
+}
+.toggle__nub {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  position: relative;
+  // day mode:
+  background: linear-gradient(40deg, #ff7b00, #ffd900 70%);
+
+  &::after {
+    content: '';
+    position: absolute;
+    border-radius: 100%;
+    top: 2px;
+    right: -2px;
+    width: 20px;
+    height: 20px;
+    background: var(--dark);
+    transform: scale(0);
+    transform-origin: top right;
+    transition: transform 0.25s;
+  }
+}
+.toggle__nub--toggled-on {
+  //night mode
+  background: linear-gradient(40deg, #3d5cab, #3ea8e7 70%);
+  &::after {
+    transform: scale(1);
+  }
+}
+.toggle__checkbox {
+  position: absolute;
+  border: 0;
+  margin: -1px;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0px, 0px, 0px, 0px);
 }
 
 @media (max-width: 799px) {
@@ -365,12 +441,6 @@ a.card-wrap {
     margin-bottom: 0;
   }
 
-  // .hero-img {
-  //   display: block;
-  //   width: 100%;
-  //   margin: 0 1rem;
-  // }
-
   .testimonials {
     grid-template-columns: 1fr 1fr;
   }
@@ -407,12 +477,12 @@ a.card-wrap {
     gap: 20px;
   }
 }
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #000;
-    color: white;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   body {
+//     background-color: #000;
+//     color: white;
+//   }
+// }
 
 // Show focus styles on links/buttons etc for 'keyboard users' only
 // This is facebook's approach.
