--- a/src/style.scss
+++ b/src/style.scss
@@ -178,9 +178,9 @@ a:visited {
     color: var(--white);
   }
 }
-.bg-tgs {
-  background: #014bba;
-}
+// .bg-tgs {
+//   background: #014bba;
+// }
 .bg-ob {
   background: #2c6422;
 }
